--- a/testcase_creator/public/css/styles.css
+++ b/testcase_creator/public/css/styles.css
@@ -87,11 +87,72 @@ main.proj-page {
 
 .proj-page h2{
     padding: 8px;
-    margin-right: 60%;
+    margin-right: 50%;
     background-color: rgb(15, 84, 134);   
     border-radius: 5em;
 }
 
+.modal-win {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 40px;
+}
+
+.modal-new-proj {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(122, 176, 194);
+    margin: 5px auto;
+    padding: 2em;
+    border: 5px solid #888;
+    width: 80%; 
+  }
+
+  .text_input input {
+    margin-bottom: 5px;
+    border-radius: 1em;
+    background-color: rgb(241, 238, 233);
+    color:　rgb(15, 84, 134);
+  }
+
+ .text_input .text_desc {
+    height: 10em;
+ } 
+
+.modal-btn {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 2em;
+    padding-inline: 4em;
+    gap: 2px;
+    font-size: smaller;
+ }
+
+/* The Close Button */
+.close {
+    /* Position it in the top right corner outside of the modal */
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+  
+  /* Close button on hover */
+  .close:hover,
+  .close:focus {
+    color: red;
+    cursor: pointer;
+}
 
 footer {
     position: fixed;
